--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ matplotlib~=3.10.0
 torchvision~=0.21.0
 opencv-python~=4.11.0.86
 scikit-image~=0.25.2
+nvidia-pyindex
 
 compressai~=1.2.6
 timm~=1.0.15
