--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,8 @@ matplotlib~=3.10.0
 torchvision~=0.21.0
 opencv-python~=4.11.0.86
 scikit-image~=0.25.2
-
+PyTurboJPEG~=1.7.7
 compressai~=1.2.6
 timm~=1.0.15
 tensorboardX~=2.6.2.2
+lpips~=0.1.4
